# homework_8_modul

./: README.md  authors.json  consumer.py  consumer_email.py  consumer_sms.py  import_data.py  models.py  models_contact.py  producer.py  pyproject.toml  quotes.json  search_quotes.py
